# J.A.R.V.I.S.CLI

./: README.md  claude.md  jarvis.py  pyproject.toml
.claude/: settings.json
jarvis/: __main__.py  config.py  core.py
jarvis/ai/: context.py  ollama_client.py
jarvis/fs/: ops.py  paths.py  permissions.py
jarvis/skills/: __init__.py  ai_skill.py  alias_skill.py  builtins.py  calc_skill.py  clipboard_skill.py  cron_skill.py  env_skill.py  fileutil_skill.py  fs_skill.py  hash_skill.py  ip_skill.py  json_skill.py  note_skill.py  plugin_skill.py  process_skill.py  remind_skill.py  replace_skill.py  sysnet_skill.py  todo_skill.py  tree_skill.py  weather_skill.py
test/: get
tests/: conftest.py  test_context.py  test_fs_ops.py  test_paths.py  test_registry.py
