[project]
name = "jarvis-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.7.0",
    "typer[all]>=0.12.3",
    "pyfiglet>=1.0.2",
]

[project.scripts]
jarvis = "jarvis.core:main"

[tool.hatch.build.targets.wheel]
packages = ["jarvis"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
